@@ -1,5 +1,13 @@
 2008-05-13  Martyn Russell  <martyn@imendio.com>
 
+	* src/trackerd/tracker-main.[ch]: Removed the log_filename from
+	the Tracker struct, it didn't need to be there. Also added a
+	function to clean up the directory locations separately to
+	actually physically removing particular directories when we exit
+	the daemon.
+
+2008-05-13  Martyn Russell  <martyn@imendio.com>
+
 	* src/tracker-indexer/tracker-indexer-module.[ch]: 
 	* src/tracker-indexer/tracker-indexer.[ch]: Added indentation
 	information to the top of each file.
